app/static/css/additional_style.css
.all_tables{
	margin-top:20px;
}


tbody tr:hover td {
  cursor: pointer;
}

li:hover a {
  cursor: pointer;
}


table.display{
  table-layout: fixed;
}

.rule1 {
    border-bottom: 1px solid black;
    width: 100%;
    padding: 0px 10px 10px 10px;
    margin-bottom: 15px;
}

.rule2 {
    border-bottom: 2px solid black;
    width: 100%;
}

.rule3 {
    border-bottom: 2px solid white;
    color: white;
}

.primary-bts {
    display: inline-block;
    height: 50px;
    line-height: 35px;
    font-weight: bold;
    font-size: 18px;
    width: 50%;
    min-width: 150px;
    color: #323232;
    border: 1px solid #323232;
    background-color: white;
    vertical-align: middle;
}

.primary-bts:hover {
    color: white;
    background-color: rgba(0, 0, 0, 0.65);
    border: 1px solid #323232;
}

.primary-bts.active {
    color: white;
    background-color: rgba(0, 0, 0, 0.65);
    border: 1px solid #323232;
}

.primary-bts.active.focus {
    color: white;
    background-color: rgba(0, 0, 0, 0.65);
    border: 1px solid #323232;
}

.banner-row {
    /*margin: 20px;*/
    height: 300px;
    padding-left: 10%;
    padding-right: 10%;
}

.banner-header {
    margin-top: 20px;
    margin-bottom: 20px;
    text-align: left;
    font-weight: bold;
    color: #323232;
}

.banner {
    display: none;
    /*border: 1px solid #313131;*/
    border-radius: 1%;
    width: 85%;
    min-width: 300px;
    box-shadow: 1px 2px 8px #626262;
    padding: 10px;
    vertical-align: middle;
}

.banner-projects {
    display: none;
    /*border: 1px solid #313131;*/
    border-radius: 1%;
    width: 100%;
    min-width: 300px;
    box-shadow: 1px 2px 8px #626262;
    padding: 10px;
    vertical-align: middle;
}

.banner_strains {
    /*border: 1px solid #313131;*/
    margin-top: 20px;
    margin-left:2.5%;
    border-radius: 1%;
    width: 95%;
    min-width: 300px;
    box-shadow: 1px 2px 8px #626262;
    padding: 10px;
    vertical-align: middle;
}

.banner_protocols {
    /*border: 1px solid #313131;*/
    margin-left:2.5%;
    border-radius: 1%;
    width: 95%;
    min-width: 300px;
    box-shadow: 1px 2px 8px #626262;
    padding: 10px;
    vertical-align: middle;
}

.banner_strains_no_width {
    /*border: 1px solid #313131;*/
    border-radius: 1%;
    box-shadow: 1px 2px 8px #626262;
    display:inline-block;
    vertical-align: middle;
}

.inside_table{
  width:100%;
  table-layout: fixed;
  overflow-x:auto;
}

table.table {
    table-layout: fixed;
}

table.table td {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
    -o-text-overflow: ellipsis;
}

.scroll_div{
  width:100%;
  overflow-x:auto;
}

#s_project_message_div{
  position:absolute;
  top:50%;
  left:40%;
  z-index:99;
}

.jumbotron{
  padding:15px;
  width:100%;
  height:auto;
}

#jumbotron-projects, #jumbotron-otherprojects, #jumbotron-class {
  padding:15px;
  width:100%;
  height:auto;
}

.my-group .form-control{
    width:50%;
}



#jumbotron-strains{
  padding:12px;
  width:100%;
  height:auto;
}

#newStrainModal .modal-dialog, #choosePipelineModal .modal-dialog, #modifyStrainModal .modal-dialog{
  width: 80%;
  height:auto;
}

#addAttributeModal .modal-dialog{
  width: 80%;
  height:80%;
}

#LabProtocolTableModal .modal-dialog{
  width: 80%;
  height:80%;
}

#LabProtocolTableModal .modal-body{
  overflow-x:auto;
}

#StrainDetailModal .modal-dialog{
  width: 80%;
  height: 80%;
}

#MergedTableModal .modal-dialog{
  width: 80%;
  height:auto;
}

#MergedTableModal .dataTables_wrapper {
  margin: 0 auto;
}

.tab-container{
  margin:10px;
  text-align:center;
}

.pipeline-list{
  text-align:center;
}

.sub_sub_container {
  margin-left:20%;
  margin-right:20%;
  margin-top: 60%;
}

.sub_container img {
    display: block;
    margin-left: auto;
    margin-right: auto;
}


/*Center tab menus*/
.nav-tabs > li, .nav-pills > li {
    float:none;
    display:inline-block;
    *display:inline; /* ie7 fix */
     zoom:1; /* hasLayout ie7 trigger */
}

.nav-tabs, .nav-pills {
    text-align:center;
}

.dt-button.buttons-collection.buttons-colvis {
  color: blue;
}

.child_row{
  background-color: #eeffff
}

.fa-2x {
  font-size: 2em !important;}

#modalNextflowLogs .modal-dialog {
  width: 95%;
}


#overlayProjects{
  z-index: 9998;
  background-color: #eee;
  opacity: 1;
  height: 100%;
  width: 100%;
  position: fixed;
  display:none;
}

#overlayWorking{
  text-align:center;
  z-index: 9999;
  position: absolute;
  margin: auto;
  top: 0;
  right: 0;
  bottom: 0;
  left: 0;
  width: 30%;
  height: 30%;
  border-radius: 3px;
  display:none;
}

.footer-container {
    position: absolute;
    width: 100%;
    height: 40px;
    background-color: #2c2c2c;
    border-color: #4b4b4b;
    margin: auto;
}

.footer-msg {
    color: #d6d6d6;
    font-weight: bold;
    padding: 5px;
    line-height: 12px;
    text-align: center;
    font-size: 10px;
}

.footer-msg a {
    color: inherit;
}

.no_files_row {
    color: red;
}

.accession_row {
    color: #2a6cff;
}

.table_button {
    margin: 4px;
}

.all_width {
    width: 100%;
}

.table_header {
    float: left;
    font-weight: bold;
    font-size: 30px;

}

.banner-title {
    text-align: left;
    font-weight: bold;
    color: #323232;
    padding-left: 0px;
    padding-right: 0px;
}

.global_stats_banner {
    background-color: rgba(0, 0, 0, 0.65);
}

